# llm-bench

./: .gitignore  README.md  app.py  pyproject.toml  run_bench.py
.github/workflows/: benchmark.yml
backends/: __init__.py  base.py  llamacpp_backend.py  ollama_backend.py  vllm_backend.py
benchmarks/: __init__.py  base.py  ocr_benchmark.py
config/: defaults.yaml
core/: aggregator.py  concurrent_runner.py  memory.py  models.py  runner.py  storage.py  sweep.py
