[project]
name = "llm-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gputil>=1.4.0",
    "httpx>=0.26.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "plotly>=5.18.0",
    "psutil>=5.9.0",
    "pyarrow>=14.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "streamlit>=1.35.0",
    "tqdm>=4.66.0",
]
